# fastinference

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yml  test.yml
main/: Cargo.toml
main/src/: main.rs
main/src/benchmarks/: logistic.rs
main/src/models/logistic/: base.rs  simd_arm.rs  simd_x86.rs
main/src/models/svm/: base.rs
main/src/utils/: arch_utils.rs
src/: lib.rs  main.rs
src/benchmarks/: logistic.rs  mod.rs
src/models/logistic/: base.rs  mod.rs  simd_arm.rs  simd_x86.rs
src/models/svm/: base.rs
src/utils/: mod.rs
